[fix] user profile username overflow

--- a/static/style.css
+++ b/static/style.css
@@ -23,10 +23,6 @@
         max-height: 65vh;
         padding: 1rem;
     }
-
-    .mobile\:align-center {
-        align-items: center;
-    }
 }
 
 .-editor:not(.active) {
